# humancrafter

./: .gitignore  README.md  evaluate.py  inference.py  pyproject.toml  requirements.txt
configs/: evaluation.yaml  inference.yaml
datasets/: README.md  example_manifest.json
humancrafter/: __init__.py  config.py  datasets.py  evaluation.py  models.py  pipeline.py
humancrafter/cli/: __init__.py  evaluate.py  inference.py
humancrafter/utils/: __init__.py  data.py  metrics.py  visualization.py
scripts/: evaluate_humancrafter.py  inference_humancrafter.py
utils/: __init__.py  data.py  metrics.py  visualization.py
